Fix z-index on play button

--- a/components/landing-page-cover/landing-page-cover.module.css
+++ b/components/landing-page-cover/landing-page-cover.module.css
@@ -6,7 +6,7 @@
 
 .buttonContainer {
   position: absolute;
-  z-index: 99;
+  z-index: 1;
   margin: 0 auto;
   height: 500px;
   width: 100%;
